code review & minor changes

--- a/data/config.json
+++ b/data/config.json
@@ -4,7 +4,7 @@
 		"address": "127.0.0.1",
 		"port": 7326,
 		"hostname": "localhost",
-		"unsecureLogin": false
+		"unsecureLogin": true
 	},
 	"motd":
 	{
