--- a/config.full.json
+++ b/config.full.json
@@ -56,6 +56,7 @@
 		"hostname": "127.0.0.1",
 		"port": 25,
 		"sslEnabled": false,
+		"startTLS": false,
 		"sender": "ICB Service",
 		"username": "foxmulder",
 		"password": "trustno1"
