cleanup database regulary

--- a/config.full.json
+++ b/config.full.json
@@ -25,7 +25,8 @@
 	},
 	"database":
 	{
-		"filename": "runtime/icbd.db"
+		"filename": "runtime/icbd.db",
+		"cleanupInterval": 3600
 	},
 	"mbox":
 	{
