--- a/config.minimal.json
+++ b/config.minimal.json
@@ -22,6 +22,10 @@
 	{
 		"verbosity": 4
 	},
+	"avatar":
+	{
+		"directory": "runtime/avatar"
+	},
 	"database":
 	{
 		"filename": "runtime/icbd.db"
