--- a/config.full.json
+++ b/config.full.json
@@ -64,8 +64,10 @@
 		"ascii_width": 64,
 		"ascii_height": 40,
 		"interval": 900,
-		"retryTimeout": 300,
-		"reloadTimeout": 1800
+		"reloadTimeout": 86400,
+		"retryTimeout": 1800,
+		"maxErrors": 5,
+		"errorTimeout": 172800
 	},
 	"smtp":
 	{
