use connection strings for network binding configuration

--- a/config.full.json
+++ b/config.full.json
@@ -5,20 +5,11 @@
 		"unsecureLogin": false,
 		"maxLogins": 100
 	},
-	"tcp":
-	{
-		"enabled": true,
-		"address": "127.0.0.1",
-		"port": 7326
-	},
-	"tcp_tls":
-	{
-		"enabled": true,
-		"address": "127.0.0.1",
-		"port": 7327,
-		"cert": "runtime/selfsigned.cert",
-		"key": "runtime/selfsigned.key"
-	},
+	"bindings":
+	[
+		"tcp://localhost",
+		"tcps://localhost?cert=./runtime/selfsigned.cert&key=./runtime/selfsigned.key"
+	],
 	"logging":
 	{
 		"verbosity": 4
