'bridged user' support (receive remote address from deprecated login field)

--- a/config.full.json
+++ b/config.full.json
@@ -7,7 +7,11 @@
 		"ipc":
 		{
 			"binding": "unix:///tmp/fuchsschwanz.sock"
-		}
+		},
+		"bridges":
+		[
+			{"loginid": "webuser", "address": "::1"}
+		]
 	},
 	"bindings":
 	[
